<resources>
    <!-- General -->
    <string name="app_name">MyQuest Survey</string>

    <!-- Login Activity -->
    <string name="btCadastrar">Cadastrar</string>
    <string name="btLogin">ENTRAR</string>
    <string name="hintEmail">Email</string>
    <string name="hintSenha">Senha</string>
    <string name="linkEsquecimento"><b>Esqueceu sua senha ?</b></string>
    <string name="linkCadastro">Ainda não possui uma conta ? <b>Cadastre-se.</b></string>
    <string name="emailBranco">Informe o email !</string>
    <string name="senhaBranco">Informe a senha !</string>
    <string name="falhaLogin">Falha ao logar !</string>

    <!-- Home Activity -->
    <string name="txSaldo">Saldo Atual:</string>
    <string name="btUtilizar">Utilizar Créditos</string>
    <string name="headerPendentes">Questionários Pendentes</string>
    <string name="LogOut">Sair</string>

    <!-- Use Activity -->
    <string name="lbUseTitle">Utilizar Créditos</string>
    <string name="txDeposito">Depósito Bancário</string>
    <string name="txEscolha">Escolha uma opção:</string>

    <!-- Questionario Activity -->
    <string name="btVoltar">Voltar</string>
    <string name="btIniciar">Iniciar</string>
    <string name="txSobre">Sobre o Questionário ...</string>
    <string name="txDescricaoDefault">Esse questionário é anônimo. Ou seja, o aplicador não terá acesso ao usuário que efetuou as respostas, bem como o usuário não saberá quem é o aplicador responsável pelo questionário.</string>

    <!-- Alternativa Activity -->
    <string name="btAnterior">&lt; Anterior</string>
    <string name="btProxima">Proxima &gt;</string>
    <string name="btConcluir">Concluir</string>
    <string name="textoTeste">Como você avalia sua experiência geral na última vez que você visitou o Instituto Federal de São Paulo ?</string>

    <!-- Recompensa Activity -->
    <string name="txParabens">PARABÉNS</string>
    <string name="txRecebimento">Você recebeu uma recompensa !</string>
    <string name="txToque">Toque em qualquer lugar para continuar ...</string>

    <!-- Dados Activity -->
    <string name="txPrimeiroAcesso">Olá, seja bem vindo.\n\nComo esse é seu primeiro acesso, é preciso preencher o formulário abaixo para que você possa receber os questionários de acordo com seus dados.</string>
    <string name="hintNascimento">25/01/1900</string>
    <string name="lbNascimento">Data de Nascimento:</string>
    <string name="lbEstado">Estado:</string>
    <string name="lbCidade">Cidade:</string>
    <string name="lbBairro">Bairro:</string>
    <string name="btPronto">PRONTO</string>
    <string name="hintSelecione">--Selecione--</string>

    <!-- Cadastro Activity -->
    <string name="cadastroTitle">CADASTRE-SE</string>
    <string name="hintConfirmacao">Confirme sua senha</string>
    <string name="btEnviar">ENVIAR</string>

</resources>
