<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="proj.ifsp.tcc1.Activity.DadosActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="proj.ifsp.tcc1.Activity.DadosActivity">

        <TextView
            android:id="@+id/lbPrimeiroAcesso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical|start"
            android:padding="0dp"
            android:text="@string/txPrimeiroAcesso"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/SmallText"
            app:layout_constraintLeft_toLeftOf="@+id/guideline8"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="81dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95"
            tools:layout_editor_absoluteX="365dp"
            tools:layout_editor_absoluteY="81dp" />

        <TextView
            android:id="@+id/lbNascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/lbNascimento"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/SmallText"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/lbPrimeiroAcesso" />

        <TextView
            android:id="@+id/lbEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbEstado"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/SmallText"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/lbNascimento" />

        <TextView
            android:id="@+id/lbCidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbCidade"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/SmallText"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/lbEstado" />

        <TextView
            android:id="@+id/lbBairro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbBairro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/SmallText"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline8"
            app:layout_constraintTop_toBottomOf="@+id/lbCidade" />

        <EditText
            android:id="@+id/txNascimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintNascimento"
            android:inputType="date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/lbNascimento"
            app:layout_constraintRight_toLeftOf="@+id/btCalendar"
            app:layout_constraintTop_toBottomOf="@+id/lbPrimeiroAcesso" />

        <Spinner
            android:id="@+id/cbEstado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="19dp"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toRightOf="@+id/lbEstado"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/lbNascimento" />

        <Spinner
            android:id="@+id/cbCidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="19dp"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toRightOf="@+id/lbCidade"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/lbEstado" />

        <Spinner
            android:id="@+id/cbBairro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="19dp"
            android:spinnerMode="dialog"
            app:layout_constraintLeft_toRightOf="@+id/lbBairro"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/lbCidade" />

        <ImageView
            android:id="@+id/btCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toLeftOf="@+id/guideline9"
            app:layout_constraintTop_toBottomOf="@+id/lbPrimeiroAcesso"
            app:srcCompat="@drawable/ic_calendar" />

        <Button
            android:id="@+id/btPronto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="salvarCadastro"
            android:text="@string/btPronto"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbBairro"
            app:layout_constraintVertical_bias="0.050000012" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
