<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="proj.ifsp.tcc1.Activity.QuestionarioActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="proj.ifsp.tcc1.Activity.QuestionarioActivity">

        <TextView
            android:id="@+id/txDescricao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/txDescricaoDefault"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/LabelSize"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/lbSobre" />

        <TextView
            android:id="@+id/lbSobre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/txSobre"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/LabelSize"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <Button
            android:id="@+id/btVoltar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/btVoltar"
            android:onClick="Voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/txDescricao"
            app:layout_constraintVertical_bias="0.14" />

        <Button
            android:id="@+id/btIniciar"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/colorSecondaryDark"
            android:text="@string/btIniciar"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/txDescricao"
            app:layout_constraintVertical_bias="0.14" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>