<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="proj.ifsp.tcc1.Activity.CadastroActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        tools:context="proj.ifsp.tcc1.Activity.CadastroActivity">

        <android.support.constraint.Guideline
            android:id="@+id/guideline10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/lbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/cadastroTitle"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_white_edittext"
            android:ems="10"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/lbTitle" />

        <EditText
            android:id="@+id/txSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_white_edittext"
            android:ems="10"
            android:hint="@string/hintSenha"
            android:inputType="textPassword"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/txEmail" />

        <EditText
            android:id="@+id/txConfirmacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_white_edittext"
            android:ems="10"
            android:hint="@string/hintConfirmacao"
            android:inputType="textPassword"
            android:paddingBottom="7dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/txSenha" />

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounder_button_light"
            android:onClick="enviarCadastro"
            android:text="@string/btEnviar"
            android:textColor="@color/colorTextSecondary"
            app:layout_constraintLeft_toLeftOf="@+id/guideline10"
            app:layout_constraintRight_toLeftOf="@+id/guideline11"
            app:layout_constraintTop_toBottomOf="@+id/txConfirmacao" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
